# AMI-AGENTS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT-BASE.md  AUDIT-TECHNICAL.md  CRITICAL-INSTALL.md  FINAL-REPORT.md  Makefile  QWEN.md  README.md  ami-agent  install  json  pyproject.toml  setup.py  test_playwright_integration.py
ami/: config_utils.py
ami/cli/: agent_logging.py  base_provider.py  claude_cli.py  config.py  constants.py  editor_utils.py  env_utils.py  exceptions.py  exec_utils.py  factory.py  gemini_cli.py  helpers.py  interface.py  main.py  mode_handlers.py  process_utils.py  provider_type.py  qwen_cli.py  stream_processor.py  streaming.py  streaming_utils.py  timer_utils.py  transcript_context.py  transcript_search.py  transcript_store.py  utils.py  validation_utils.py
ami/cli_components/: __init__.py  confirmation_dialog.py  cursor_manager.py  dialogs.py  editor_display.py  editor_saving.py  format_utils.py  keys.py  legend.py  menu_selector.py  selection_dialog.py  selection_dialog_render.py  selector.py  session_browser.py  session_detail.py  status.py  status_containers.py  status_systemd.py  status_utils.py  storage.py  stream_renderer.py  text_editor.py  text_input_cli.py  text_input_utils.py  tui.py
ami/config/: automation.template.yaml  automation.yaml  extensions.template.yaml  hooks.yaml  install-all.yaml  install-defaults.yaml  services.yaml  update-defaults.yaml
ami/core/: __init__.py  bootloader_agent.py  config.py  constants.py  conversation.py  env.py  factory.py  guards.py  interfaces.py  logic.py  models.py  shared_types.py  utils.py
ami/hooks/: manager.py  types.py  validators.py
ami/scripts/: bootstrap_component_defs.py  bootstrap_components.py  bootstrap_install.py  bootstrap_installer.py  find_duplicates.py  pre-req.sh  register_extensions.py  update.py  update_ci.py  update_discovery.py  update_display.py  update_git.py  update_interactive.py  update_types.py
ami/tools/: bootloader_service.py  clean_temp_files.py  command_executor.py  test_qwen_silence.py  update_cli_versions.py
ami/types/: api.py  common.py  config.py  events.py  results.py  status.py
ami/utils/: __init__.py  banner.py  helpers.py  process.py  prometheus_registry_init.py  uuid_utils.py
ansible/: ansible.cfg
ansible/inventory/: localhost.yml
config/: banned_words_exceptions.yaml  coverage_thresholds.yaml  sensitive_files_exceptions.yaml
docs/: ARCH-AGENT-ECOSYSTEM.md  ARCHITECTURE-AGENT-ECOSYSTEM.md  AUDIT-CLAUDE-SESSION-2026-04-17.md  AUDIT-INSTALL-ISSUES.md  CRITICAL-INSTALL.md  DEPENDENCY-MAP.md  GUIDE-USAGE.md  PLAYWRIGHT_INTEGRATION_SPEC.md  PLAYWRIGHT_INTEGRATION_SUMMARY.md  README.md  REQUIREMENTS-BACKUP.md  REQUIREMENTS-HOOKS.md  REQUIREMENTS-IAM.md  REQUIREMENTS-MAIL.md  RUST-TRADING-ARCHITECTURE.md  SPEC-HOOKS.md  SPECIFICATION-AUTHENTICATION.md  SPECIFICATION-AUTHORIZATION.md  SPECIFICATION-BACKUP.md  SPECIFICATION-IAM.md  SPECIFICATION-OPERATIONS.md  SPECIFICATION-SECRETS.md  USAGE.md  playwright-integration-spec.md
docs/architecture/: PROPOSAL-MERKLE-CONSOLIDATION.md  PROPOSAL-SHARED-PORTAL-LIB.md  PROPOSAL-ZK-ERROR-UNIFICATION.md
docs/archive/: AUDIT-REMEDIATION-2026-Q1.md  AUTH-FRAGMENTATION-AUDIT.md  MIGRATION-PROGRESS.md  REMEDIATION-PLAN.md  REQUIREMENTS-IAM.md  SPECIFICATION-AUTHENTICATION.md  TODO-CODE-QUALITY-MIGRATION.md
docs/requirements/: REQ-AGENT-CONTAINERS.md  REQ-BACKUP.md  REQ-EXTENSIONS.md  REQ-HOOKS.md  REQ-IAM.md  REQ-MAIL.md  REQ-UPDATE.md  REQUIREMENTS-AGENT-CONTAINERS.md
docs/specifications/: SPEC-AUTH-BASE-MIGRATION.md  SPEC-AUTH-CONSUMER-MIGRATION.md  SPEC-AUTH-OIDC-PROVIDER.md  SPEC-AUTHENTICATION.md  SPEC-AUTHORIZATION.md  SPEC-BACKUP.md  SPEC-DATAOPS-FOUNDATION.md  SPEC-EXTENSIONS.md  SPEC-HOOKS.md  SPEC-IAM.md  SPEC-MAIL.md  SPEC-OPERATIONS.md  SPEC-PLAYWRIGHT-SUMMARY.md  SPEC-PLAYWRIGHT.md  SPEC-SECRETS.md  SPEC-UPDATE.md
res/ansible/: compose.yml
res/config/: banned_words.yaml  coverage_thresholds.yaml  dead_code.yaml  dependency_check.yaml  dependency_excludes.yaml  file_length_limits.yaml  mypy.toml  pyproject.base.toml  ruff.toml
res/docker/: docker-compose.yml
scripts/: bootstrap_components.py  bootstrap_install.py  bootstrap_installer.py  package.json  package.json.backup  register_extensions.py
scripts/ci/: check_banned_words.py  check_dependency_versions.py  check_file_length.py  check_init_files.py  verify_coverage.py
scripts/setup/: test_install_e2e.sh
scripts/utils/: archive_utils.py  disable_no_verify_patcher.sh
tests/: conftest.py  test_shell_env.py
tests/e2e/: test_interactive_hang.py  test_performance.py
tests/integration/: conftest.py  test_agent_logging_integration.py  test_ami_agent_guards.py  test_ami_agent_interactive_integration.py  test_bootloader_agent_integration.py  test_ci_env_deep_integration.py  test_ci_scripts_integration.py  test_cli_agent_loop.py  test_cli_providers_integration.py  test_container_systemd_mocked_integration.py  test_container_systemd_mocked_part2_integration.py  test_container_systemd_mocked_part3_integration.py  test_core_logic_integration.py  test_dependency_checker_integration.py  test_extensions_help.py  test_git_safety_patcher.py  test_guards_integration.py  test_hooks_integration.py  test_legend_dialog_integration.py  test_policy_engine_deep_integration.py  test_process_executor_integration.py  test_selection_dialog_methods_integration.py  test_selection_dialog_methods_part2_integration.py  test_setup_shell_aliases.py  test_status_display_integration.py  test_status_parsers_integration.py  test_status_print_functions_integration.py  test_status_print_functions_part3_integration.py  test_stream_execution_integration.py  test_stream_pipeline_integration.py  test_stream_renderer_deep_integration.py  test_stream_renderer_state_integration.py  test_terminal_ui_deep_integration.py  test_text_editor_dialog_render_integration.py  test_text_editor_dialog_render_part2_integration.py  test_tui_selection_integration.py  test_update_integration.py
tests/unit/: conftest.py  test_config.py  (+45 more)
workflows/: WF-RESEARCH-REQUIREMENTS.md
(+236 files in other folders)
