[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami-agents"
version = "0.0.1"
description = "AMI Agent Orchestration System with shared code quality infrastructure"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
authors = [{name = "AMI Team", email = "ami@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "uuid-utils==0.14.0",
    "loguru==0.7.3",
    "pandas==2.2.3",
    "numpy==2.4.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "click==8.3.1",
    "setuptools==80.10.2",
    "matrix-nio==0.25.2",
    "matrix-commander==8.0.5",
    "python-dotenv==1.2.1",
    "prometheus-client==0.24.1",
    "psutil==7.2.2",
    "pyyaml==6.0.3",
    "nodeenv==1.10.0",
    "playwright==1.58.0",
    "synadm==0.49.2",
    "google-auth==2.48.0",
    "google-auth-oauthlib==1.2.4",
    "google-api-python-client==2.188.0",
    "zstandard==0.25.0",
    "pyahocorasick==2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ami*"]

[tool.setuptools.package-data]
ami = [
    "res/config/*.toml",
    "res/config/*.yaml",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-timeout==2.4.0",
    "pre-commit==4.5.1",
    "black==26.1.0",
    "ruff==0.14.14",
    "mypy==1.19.1",
    "httpx==0.28.1",
    "types-requests==2.32.4.20260107",
    "types-setuptools==80.10.0.20260124",
    "types-PyYAML==6.0.12.20250915",
    "types-tqdm==4.67.0.20250809",
    "google-auth-stubs==0.3.0",
    "tomli==2.4.0",
    "tomli-w==1.2.0",
]
lint = [
    "ruff==0.14.14",
    "black==26.1.0",
]
type-check = [
    "mypy==1.19.1",
    "tomli==2.4.0",
    "tomli-w==1.2.0",
]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-timeout==2.4.0",
]
ci = [
    "pre-commit==4.5.1",
]
torch-cpu = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
]
torch-cuda = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
]
torch-rocm = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "pytorch-triton-rocm==3.1.0",
]
torch-mps = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
]

[tool.uv]
package = true
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cuda" },
        { extra = "torch-rocm" },
        { extra = "torch-mps" },
    ],
]

[tool.uv.workspace]
members = ["projects/AMI-TRADING"]
exclude = ["projects/AMI-STREAMS"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu121", extra = "torch-cuda" },
    { index = "pytorch-rocm62", extra = "torch-rocm" },
    { index = "pytorch-cpu", extra = "torch-mps" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu121", extra = "torch-cuda" },
    { index = "pytorch-rocm62", extra = "torch-rocm" },
    { index = "pytorch-cpu", extra = "torch-mps" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu121", extra = "torch-cuda" },
    { index = "pytorch-rocm62", extra = "torch-rocm" },
    { index = "pytorch-cpu", extra = "torch-mps" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm62", extra = "torch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.mypy]
# Config is in res/config/mypy.toml - mypy will auto-discover it
# NO CHEATING. All files must pass type checking.
exclude = [
    "projects/",
]
explicit_package_bases = true

