[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami-agents"
version = "0.0.1"
description = "AMI Agent Orchestration System with shared code quality infrastructure"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
authors = [{name = "AMI Team", email = "ami@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "uuid-utils==0.14.1",
    "loguru==0.7.3",
    "pandas==2.2.3",
    "numpy==2.4.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "click==8.3.1",
    "setuptools==80.10.2",
    "matrix-nio==0.25.2",
    "matrix-commander==8.0.5",
    "python-dotenv==1.2.2",
    "prometheus-client==0.24.1",
    "psutil==7.2.2",
    "pyyaml==6.0.3",
    "nodeenv==1.10.0",
    "playwright==1.58.0",
    "synadm==0.49.2",
    "google-auth==2.49.1",
    "google-auth-oauthlib==1.3.1",
    "google-api-python-client==2.193.0",
    "tqdm==4.67.3",
    "zstandard==0.25.0",
    "pyahocorasick==2.3.0",
    "podman-compose==1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ""
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ami.*"]
namespaces = true

[tool.setuptools.package-data]
ami = [
    "res/config/*.toml",
    "res/config/*.yaml",
]

[project.optional-dependencies]
dev = [
    "ami-ci[dev]",
]

[tool.uv]
package = true

[tool.uv.sources]
ami-ci = { path = "projects/AMI-CI", editable = true }

[tool.mypy]
# Config is in res/config/mypy.toml - mypy will auto-discover it
# NO CHEATING. All files must pass type checking.
exclude = [
    "projects/",
]
explicit_package_bases = true

